<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/paper_color"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:transitionName="@string/transition_search_bar"
            app:navigationIcon="@drawable/ic_arrow_back">

            <LinearLayout
                style="@style/SearchBarContainer"
                android:layout_width="match_parent"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/search_icon"
                    style="@style/SearchBarIcon"
                    app:srcCompat="@drawable/ic_search_white_24dp"
                    app:tint="?attr/placeholder_color" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_edit_text"
                    style="@style/SearchBarText"
                    android:background="@android:color/transparent"
                    android:hint="@string/page_toolbar_search_hint"
                    android:imeOptions="actionSearch"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/clear_search_button"
                    style="@style/SearchBarVoiceIcon"
                    android:contentDescription="@string/search_clear_content_description"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_close"
                    app:tint="?attr/colorOnSurfaceVariant" />

                <ImageView
                    android:id="@+id/voice_search_button"
                    style="@style/SearchBarVoiceIcon"
                    app:srcCompat="@drawable/ic_voice_search_24"
                    app:tint="?attr/colorOnSurface" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/search_fragment_container"
        android:name="com.omiyawaki.osrswiki.search.SearchFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
